--- a/index.html
+++ b/index.html
@@ -3,420 +3,267 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Plenēra – Planner Store</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Great+Vibes&display=swap" rel="stylesheet">
+<title>Plenēra</title>
 
 <style>
-/* COLORS */
-:root {
-    --dark-plum: #743c5a;
-    --raspberry: #ce4f7f;
-    --soft-pink: #ffe4eb;
-    --baby-blue: #dce3ff;
-    --navy: #253668;
-    --white: #ffffff;
-}
-
-/* RESET */
+/* ----------- GENERAL ----------- */
 body {
     margin: 0;
-    font-family: 'Lora', serif;
-    background: var(--soft-pink);
-    overflow-x: hidden;
+    font-family: 'Georgia';
+    background: linear-gradient(#ffe5ef, #e1d4ff);
 }
 
-/* MAIN CONTAINER */
-.container {
-    max-width: 1100px;
-    margin: auto;
-    background: linear-gradient(180deg, var(--soft-pink), var(--baby-blue));
-    min-height: 100vh;
-    padding-bottom: 40px;
-}
-
-/* NAVBAR */
-nav {
-    background: var(--navy);
-    padding: 12px 20px;
+/* ----------- HEADER ----------- */
+header {
+    background: #1b2a52;
+    padding: 18px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: var(--soft-pink);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
 }
 
 .logo {
-    font-family: 'Great Vibes', cursive;
-    font-size: 34px;
-    color: var(--soft-pink);
+    font-size: 32px;
+    color: #ffbad7;
+    font-family: "Brush Script MT", cursive;
 }
 
-/* NAV LINKS (DESKTOP) */
-.nav-links {
-    display: flex;
-    gap: 20px;
-}
-
-.nav-links a {
-    color: var(--soft-pink);
-    text-decoration: none;
-    font-size: 17px;
-    cursor: pointer;
-}
-.nav-links a:hover {
-    color: var(--raspberry);
-}
-
-/* BURGER BUTTON (MOBILE) */
+/* ----------- BURGER MENU ----------- */
 .burger {
-    display: none;
-    font-size: 30px;
-    cursor: pointer;
-    color: var(--raspberry);
-}
-
-/* MOBILE MENU */
-.mobile-menu {
-    display: none;
+    width: 32px;
+    height: 24px;
+    display: flex;
     flex-direction: column;
-    background: var(--navy);
-    text-align: center;
-    padding: 20px 0;
-}
-
-.mobile-menu a {
-    color: var(--soft-pink);
-    text-decoration: none;
-    padding: 12px 0;
-    display: block;
-    font-size: 18px;
-}
-
-.mobile-menu a:hover {
-    color: var(--raspberry);
-}
-
-/* RESPONSIVE */
-@media (max-width: 850px) {
-    .nav-links { display: none; }
-    .burger { display: block; }
-    .container { max-width: 600px; }
-}
-
-@media (max-width: 480px) {
-    .container { max-width: 430px; }
-}
-
-/* SECTIONS */
-section {
-    display: none;
-    padding: 25px;
-}
-section.active { display: block; }
-
-h1 {
-    text-align: center;
-    color: var(--navy);
-    margin-top: 10px;
-}
-
-/* ACCOUNT BLOCK (ONLY ON HOME) */
-#account-box {
-    background: var(--white);
-    width: 90%;
-    margin: 15px auto;
-    padding: 18px;
-    border-radius: 16px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.12);
-    text-align: center;
-}
-
-/* CUSTOMIZE OPTIONS */
-.options {
-    margin-top: 25px;
-    display: grid;
-    gap: 15px;
-}
-
-.option {
-    background: var(--white);
-    padding: 18px;
-    border-radius: 14px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.15);
-}
-
-select {
-    width: 100%;
-    margin-top: 8px;
-    padding: 10px;
-    border-radius: 8px;
-    border: none;
-    background: var(--soft-pink);
-}
-
-/* BUTTON */
-button {
-    width: 90%;
-    display: block;
-    margin: 30px auto;
-    padding: 14px;
-    background: var(--raspberry);
-    color: white;
-    border: none;
-    border-radius: 12px;
-    font-size: 18px;
+    justify-content: space-between;
     cursor: pointer;
 }
-button:hover { background: var(--navy); }
 
-/* CART */
-#cart-items li {
-    list-style: none;
-    background: white;
-    padding: 18px;
-    margin: 12px 0;
-    border-radius: 14px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.12);
+.burger span {
+    display: block;
+    height: 4px;
+    border-radius: 4px;
+    background: #ff7bac; /* розовый оттенок */
+    transition: 0.3s;
 }
 
-/* POPUP TEMU */
-.popup {
+/* ----------- NAVIGATION ----------- */
+nav {
     position: fixed;
-    bottom: 25px;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 0;
+    right: -70%;
+    width: 70%;
+    height: 100%;
+    background: #1b2a52;
+    padding-top: 80px;
+    transition: 0.3s;
+}
+
+nav a {
+    display: block;
+    padding: 18px 30px;
+    color: #ffbad7;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+nav.open {
+    right: 0;
+}
+
+/* ----------- SECTIONS ----------- */
+.section {
+    padding: 40px 20px;
+    text-align: center;
+}
+
+h1, h2 {
+    color: #1b2a52;
+}
+
+/* ----------- CARDS ----------- */
+.card {
+    max-width: 600px;
+    margin: 20px auto;
     background: white;
-    padding: 18px 26px;
-    border-radius: 16px;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.25);
-    opacity: 0;
-    pointer-events: none;
-    transition: .4s;
+    padding: 25px;
+    border-radius: 20px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.12);
 }
-.popup.show {
-    opacity: 1;
-    pointer-events: auto;
-}
-.popup-btn {
-    display: inline-block;
-    margin-top: 12px;
-    padding: 8px 16px;
-    background: var(--raspberry);
+
+/* ----------- CONTACT CARD ----------- */
+.contact-card {
+    background: #1b2a52;
     color: white;
-    border-radius: 8px;
+}
+
+.contact-card a {
+    color: #ff7bac;
+    font-size: 18px;
+}
+
+/* ----------- SHOP ITEMS ----------- */
+.shop-item {
+    border-radius: 16px;
+    padding: 20px;
+    background: #ffffffcc;
+    margin-bottom: 20px;
+}
+
+.shop-item button {
+    background: #ff7bac;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    margin-top: 10px;
+    border-radius: 12px;
     cursor: pointer;
 }
 
-/* CONTACTS */
-#contacts-box {
-    background: var(--navy);
-    padding: 35px;
-    margin: 25px auto;
-    border-radius: 18px;
-    width: 90%;
-    color: white;
-}
-
+/* ----------- FOOTER ----------- */
 footer {
     text-align: center;
     padding: 20px;
-    background: var(--navy);
-    color: var(--soft-pink);
+    background: #1b2a52;
+    color: #ffbad7;
+    margin-top: 40px;
+}
+
+/* ----------- TABLET ----------- */
+@media (min-width: 600px) {
+    nav {
+        width: 40%;
+        right: -40%;
+    }
+}
+
+/* ----------- DESKTOP ----------- */
+@media (min-width: 900px) {
+    .burger {
+        display: none;
+    }
+
+    nav {
+        position: static;
+        display: flex;
+        height: auto;
+        width: auto;
+        background: none;
+        padding: 0;
+        right: 0;
+    }
+
+    nav a {
+        padding: 0 15px;
+        color: #ffbad7;
+        font-size: 22px;
+    }
 }
 </style>
 </head>
-
 <body>
 
-<div class="container">
+<header>
+    <div class="logo">Plenēra</div>
 
-<!-- POPUP -->
-<div id="popup" class="popup">
-  Added to cart!<br>
-  <span class="popup-btn" onclick="showSection('cart')">Go to cart</span>
-  <span class="popup-btn" onclick="hidePopup()">Continue</span>
-</div>
+    <div class="burger" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
 
-<!-- NAV -->
-<nav>
-  <div class="logo">Plenēra</div>
-
-  <div class="nav-links">
-    <a onclick="showSection('home')">Home</a>
-    <a onclick="showSection('customize')">Customize</a>
-    <a onclick="showSection('cart')">Cart</a>
-    <a onclick="showSection('contacts')">Contacts</a>
-  </div>
-
-  <div class="burger" onclick="toggleMenu()">☰</div>
-</nav>
-
-<div id="mobileMenu" class="mobile-menu">
-  <a onclick="mobileGo('home')">Home</a>
-  <a onclick="mobileGo('customize')">Customize</a>
-  <a onclick="mobileGo('cart')">Cart</a>
-  <a onclick="mobileGo('contacts')">Contacts</a>
-</div>
+    <nav id="menu">
+        <a href="#home">Home</a>
+        <a href="#shop">Shop</a>
+        <a href="#account">Account</a>
+        <a href="#contacts">Contacts</a>
+    </nav>
+</header>
 
 <!-- HOME -->
-<section id="home" class="active">
-  <h1>Welcome to Plenēra</h1>
-
-  <div id="account-box">
-    <h3>Your Account</h3>
-    <p>You are not logged in.</p>
-    <button onclick="alert('Registration will be added later')">Register</button>
-  </div>
-
-  <p style="text-align:center;">Handmade planners, elegant designs, fully customizable.</p>
+<section id="home" class="section">
+    <h1>Welcome to Plenēra</h1>
+    <div class="card">
+        <p>Beautiful planners and elegant tools for your daily life ✨</p>
+    </div>
 </section>
 
-<!-- CUSTOMIZE -->
-<section id="customize">
-  <h1>Create Your Planner</h1>
+<!-- SHOP -->
+<section id="shop" class="section">
+    <h2>Shop</h2>
 
-  <div class="options">
-
-    <div class="option">
-      Page color
-      <select id="pageColorSelect">
-        <option value="White">White</option>
-        <option value="Cream">Cream</option>
-        <option value="Soft Pink">Soft Pink</option>
-      </select>
+    <div class="card shop-item">
+        <h3>Premium Planner</h3>
+        <p>Elegant soft-cover planner.</p>
+        <button>Add to Cart</button>
     </div>
 
-    <div class="option">
-      Cover design
-      <select id="coverSelect">
-        <option value="Marble">Marble</option>
-        <option value="Minimalistic">Minimalistic</option>
-        <option value="Pastel Art">Pastel Art</option>
-      </select>
+    <div class="card shop-item">
+        <h3>Sticker Pack</h3>
+        <p>Cute stickers for journaling.</p>
+        <button>Add to Cart</button>
     </div>
-
-    <div class="option">
-      Months
-      <select id="monthsSelect">
-        <option value="3 months">3 months</option>
-        <option value="6 months">6 months</option>
-      </select>
-    </div>
-
-    <div class="option">
-      Stickers
-      <select id="stickerSelect">
-        <option value="With stickers">With stickers</option>
-        <option value="Without stickers">Without stickers</option>
-      </select>
-    </div>
-
-    <div class="option">
-      Pen
-      <select id="penSelect">
-        <option value="With pen">With pen</option>
-        <option value="Without pen">Without pen</option>
-      </select>
-    </div>
-  </div>
-
-  <button onclick="addToCart()">Add to Cart</button>
 </section>
 
-<!-- CART -->
-<section id="cart">
-  <h1>Your Cart</h1>
-  <ul id="cart-items"></ul>
-  <h2 style="text-align:center;">Total: <span id="total-price">0.00</span>€</h2>
+<!-- ACCOUNT -->
+<section id="account" class="section">
+    <h2>Your Account</h2>
+    <div class="card">
+        <p id="account-status">Checking login...</p>
+        <button onclick="login()" style="
+            background:#ff7bac; 
+            color:white; 
+            padding:12px 22px; 
+            border:none; 
+            border-radius:12px; 
+            font-size:18px;
+        ">Log In</button>
+    </div>
 </section>
 
 <!-- CONTACTS -->
-<section id="contacts">
-  <div id="contacts-box">
-    <h1>Contacts</h1>
-    <p>Email:</p>
-    <p><a href="mailto:Plenera.planotajs@gmail.com" style="color:white;">Plenera.planotajs@gmail.com</a></p>
-  </div>
+<section id="contacts" class="section">
+    <div class="card contact-card">
+        <h2>Contact Us</h2>
+        <p><strong>Email:</strong></p>
+        <a href="mailto:Plenera.planotajs@gmail.com">Plenera.planotajs@gmail.com</a>
+    </div>
 </section>
 
 <footer>
-  © 2025 Plenēra. All rights reserved.
+    © 2025 Plenēra. All rights reserved.
 </footer>
 
-</div>
-
 <script>
-let cart = [];
-
 function toggleMenu() {
-    document.getElementById("mobileMenu").classList.toggle("active");
-    const menu = document.getElementById("mobileMenu");
-    menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    document.getElementById("menu").classList.toggle("open");
 }
 
-function mobileGo(id) {
-    showSection(id);
-    toggleMenu();
+function login() {
+    let email = prompt("Enter email:");
+    let password = prompt("Enter password:");
+
+    if (!email || !password) {
+        alert("Please fill all fields");
+        return;
+    }
+
+    localStorage.setItem("userEmail", email);
+    document.getElementById("account-status").innerText =
+        "You are logged in as: " + email;
 }
 
-function hidePopup() {
-    document.getElementById("popup").classList.remove("show");
+function checkLogin() {
+    let saved = localStorage.getItem("userEmail");
+    if (saved) {
+        document.getElementById("account-status").innerText =
+            "You are logged in as: " + saved;
+    } else {
+        document.getElementById("account-status").innerText =
+            "You are not logged in.";
+    }
 }
 
-function showPopup() {
-    const popup = document.getElementById("popup");
-    popup.classList.add("show");
-    setTimeout(() => popup.classList.remove("show"), 3000);
-}
-
-function addToCart() {
-    const item = {
-        pageColor: document.getElementById("pageColorSelect").value,
-        cover: document.getElementById("coverSelect").value,
-        months: document.getElementById("monthsSelect").value,
-        stickers: document.getElementById("stickerSelect").value,
-        pen: document.getElementById("penSelect").value,
-        price: 12.99
-    };
-
-    cart.push(item);
-    updateCart();
-    showPopup();
-}
-
-function updateCart() {
-    const list = document.getElementById("cart-items");
-    const totalPrice = document.getElementById("total-price");
-    list.innerHTML = "";
-    
-    let sum = 0;
-
-    cart.forEach((item, index) => {
-        const li = document.createElement("li");
-        li.innerHTML = `
-            <strong>Planner #${index + 1}</strong><br>
-            Page color: ${item.pageColor}<br>
-            Cover: ${item.cover}<br>
-            Months: ${item.months}<br>
-            Stickers: ${item.stickers}<br>
-            Pen: ${item.pen}<br>
-            <strong>${item.price.toFixed(2)}€</strong>
-        `;
-        list.appendChild(li);
-        sum += item.price;
-    });
-
-    totalPrice.innerText = sum.toFixed(2);
-}
-
-function showSection(id) {
-    document.querySelectorAll("section").forEach(s => s.classList.remove("active"));
-    document.getElementById(id).classList.add("active");
-    hidePopup();
-}
+window.onload = checkLogin;
 </script>
 
 </body>
